--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My First Github Repo </title>
 </head>
 <body>
-    
+    <h1>My name is sunny</h1>
+    <p>This is my House</p>
+    <h3>New code change</h3>
 </body>
 </html>
