--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3>New code change</h3>
     <p>More pharagrap</p>
     <p>Coding codaing </p>
+    <img src="IMG_20181217_003105.JPG" alt="">
 </body>
 </html>
