new Imahe added

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>More pharagrap</p>
     <p>Coding codaing </p>
     <img src="IMG_20181217_003105.JPG" alt="">
+    <img src="IMG_20181217_011953.JPG" alt="">
 </body>
 </html>
